GitVersion1/objects/Flow_Dummy_Object__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Flow_Dummies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>UserId__r.FirstName&amp;&quot; &quot;&amp;UserId__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <label>Flow Dummy</label>
    <nameField>
        <label>Flow Dummy Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow Dummies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>